############################################################################
## So@Gui@/src/Inventor/Makefile.am

include @Gui@/common/Makefile.common

SUBDIRS = @Gui@

BUILT_SOURCES = \
	$(SoGuiAllBuiltFiles)

CLEANFILES = \
	$(SoGui_src_Inventor_BuiltFiles) \
	$(SoGui_src_Inventor_BuiltMetaFiles)
